# calculator

./: CMakeLists.txt  README.md
include/: calculator.h  computer.h
src/: calculator.cpp  computer.cpp  main.cpp
